# order_agnostic_diffusion_geostats

./: .gitignore  MANIFEST.in  README.md  curvenote.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yaml
notebooks/: interactive_conditional_image_generation_demo_gradio.ipynb  log_likelihood_evaluation_demo_gradio.ipynb  train_oadg_models_colab_hf_wb.ipynb
oadg/: dataset.py  sampling.py  training.py
scripts/: conditional_generation_channels_demo.py  conditional_generation_demo.py  conditional_generation_mnist_demo.py  train.py
src/oadg/: dataset.py  sampling.py  training.py
tests/: test_dataset.py
