[flake8]
ignore = E203, E722, E501, E741, W503, W605
max-line-length = 119
exclude =
    __pycache__
    manage.py
    settings.py
    venv
    .pytest_cache
    oadg.egg-info

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE